# lora_gateway

./: .gitignore  CMakeLists.txt  Makefile  readme.md  reset_lgw21.sh
libloragw/: CMakeLists.txt  Makefile  library.cfg
libloragw/inc/: loragw_fpga.h  loragw_gps.h  loragw_hal.h  loragw_lbt.h  loragw_radio.h  loragw_reg.h  loragw_spi.h
libloragw/src/: lora_shm.h  loragw_fpga.c  loragw_gps.c  loragw_gps.shm.c  loragw_hal.c  loragw_hal.shm.c  loragw_lbt.c  loragw_radio.c  loragw_reg.c  loragw_spi.ftdi.c  loragw_spi.native.c  ubx_loragw_gps.c
libloragw/tst/: test_loragw_gps.c  test_loragw_reg.c  test_loragw_ubx.c
util_pkt_logger/: Makefile  global_conf.json
util_pkt_logger/src/: util_pkt_logger.c
util_spi_stress/: Makefile
util_tx_continuous/: Makefile
util_tx_test/: Makefile
